SM-12 - Skin manager does not display all site that the specific skin is used in. - Added method for default skin - Fixed sql error - Made findbugs happy.