@@ -28,7 +28,6 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.sql.SQLException;
 import java.sql.Timestamp;
-import java.util.Collections;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
@@ -36,7 +35,6 @@ import java.util.List;
 import nl.edia.sakai.tool.skinmanager.SkinArchiveService;
 import nl.edia.sakai.tool.skinmanager.model.SkinArchive;
 
-import org.apache.commons.lang.StringUtils;
 import org.hibernate.Criteria;
 import org.hibernate.Hibernate;
 import org.hibernate.HibernateException;
@@ -196,7 +194,7 @@ public class SkinArchiveServiceImpl extends HibernateDaoSupport implements SkinA
 	private SkinArchive findSkinArchive(final String name, int version, Session session) {
 		return (SkinArchive) session.createCriteria(SkinArchive.class)
 			.add(Restrictions.eq("name", name))
-			.add(Restrictions.eq("version", new Integer(version))).uniqueResult();
+			.add(Restrictions.eq("version", Integer.valueOf(version))).uniqueResult();
 	}
 
 	private SkinArchive findSkinArchive(final String name, Session session) {
@@ -205,17 +203,20 @@ public class SkinArchiveServiceImpl extends HibernateDaoSupport implements SkinA
 	}
 
 	@SuppressWarnings("unchecked")
-    public List<Site> findSites(final String skin) {
-		if (StringUtils.isNotEmpty(skin)) {
-			return (List<Site>) getHibernateTemplate().execute(new HibernateCallback() {
-				public Object doInHibernate(Session session) throws HibernateException, SQLException {
-					Query query = session.getNamedQuery("findSitesWithSkin");
-					query.setString("skin", skin);
-					return query.list();
+    public List<Site> findSites(final String skin, final boolean isDefault) {
+		return (List<Site>) getHibernateTemplate().execute(new HibernateCallback() {
+			public Object doInHibernate(Session session) throws HibernateException, SQLException {
+				Query query;
+				if (isDefault) {
+					query = session.getNamedQuery("findSitesWithDefaultSkin");
+				} else {
+					query = session.getNamedQuery("findSitesWithSkin");
+
 				}
-			});
-		}
-		return Collections.emptyList();
+				query.setString("skin", skin);
+				return query.list();
+			}
+		});
 	}
 
 }
